route vers un tag ok

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <h1>INDEX LOL</h1>        
+        <h1><a href="#">INDEX LOL</a></h1>        
         <nav>
             <ul>
                 <li>
                     <a href="#">PERSONNAGES</a>
                 </li>
                 <li>
-                    <a href="#">TAGS</a>
+                    <a href="#/tags/">TAGS</a>
                 </li>
             </ul>
         </nav>
