--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">PERSONNAGES</a>
+                    <a href="#/personnages/">PERSONNAGES</a>
                 </li>
                 <li>
                     <a href="#/tags/">TAGS</a>
