--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
         <nav>
             <ul>
                 <li>
+                    <a href="#">ACCUEIL</a>
+                </li>
+                <li>
                     <a href="#/personnages/">PERSONNAGES</a>
                 </li>
                 <li>
